--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1035,10 +1035,10 @@ t
   height:29em
 }
 .side-lg {
-  height: 33em;
+  height: 34em;
 }
 .side-md {
-  height: 25em
+  height: 24em
 }
 .flex {
   display: flex;
@@ -1295,6 +1295,10 @@ div.org-container input[type="checkbox"] {
 .registration-label {
   display:inline-block; 
   opacity: 0.7;
+  font-size: 1em;
+}
+.timezone-container {
+  padding-bottom: 2em;
 }
 
 /** Responsive sizes **/
@@ -1382,6 +1386,9 @@ div.org-container input[type="checkbox"] {
 
   .side {
     height: 40em;
+  }
+  .side-custom {
+    height: 37em;
   }
   #phone, #email {
     width: 100%;
@@ -1538,6 +1545,9 @@ div.org-container input[type="checkbox"] {
   }
   #adminTable .consentdate-field {
     display: none;
+  }
+  .side-custom {
+    height: 35em
   }
 
 }
