--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -222,6 +222,10 @@ $(document).ready(function(){
         targetField: $("input[name='ethnicity']")
      },
      {
+        attachID: "profileTimeZone",
+        targetField: $("#profileTimeZone")
+     },
+     {
         attachID: "rolesGroup",
         targetField: $("input[name='user_type']")
      }].forEach(function(o) {
