--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -971,13 +971,16 @@ table.profile-audit-log TH,
 .side-md {
   height: 22em;
 }
+.side-lg {
+  height: 32em;
+}
 .flex {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 .flex div {
-  margin: 0.5em 1.2em 0.5em 0.1em;
+  margin: 0.5em 1.7em 0.5em 0.1em;
 }
 .pagination {
   font-size: 0.93em;
@@ -1210,6 +1213,10 @@ div.org-container input[type="checkbox"] {
 .registration-label {
   display:inline-block; 
   opacity: 0.7;
+  font-size: 0.99em;
+}
+.timezone-container {
+  padding-bottom: 2em;
 }
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -1359,6 +1366,9 @@ div.org-container input[type="checkbox"] {
   #adminTable .email-field {
     display: none;
   }
+  .timezone-container {
+    padding-bottom: 0;
+  }
 }
 @media (max-width: 730px) {
   #userSessionsList {
@@ -1419,6 +1429,9 @@ div.org-container input[type="checkbox"] {
   }
   .side {
     height: 35em;
+  }
+  .side-lg {
+    height: 38em;
   }
   .side-xs {
     height: 22em;
