--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -652,10 +652,6 @@ a.btn {
 #userOrgs {
   font-size: 0.99em;
 }
-#userOrgs label :first-of-type {
-  margin-bottom: 0.5em;
-}
-
 #fillOrgs legend {
   font-size: 0.92em;
   color: #595F57;
@@ -1169,7 +1165,7 @@ div.org-container legend {
   color: #474848;
 }
 div.org-container label.org-label{
-  margin: 0.2em 0;
+  margin: 0.1em 0 0.22em 0;
 }
 
 div.org-container .text-muter {
@@ -1207,11 +1203,11 @@ div.org-container input[type="checkbox"] {
   font-size: 0.95em;
 }
 .registration-status-container {
-  margin:0 0 0.8em 0; 
+  margin:0 0 0.8em 0;
   font-size: 0.95em;
 }
 .registration-label {
-  display:inline-block; 
+  display:inline-block;
   opacity: 0.7;
   font-size: 0.99em;
 }
