minor css fixes in initial queries page, remove unwanted code from layout.html

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -13,7 +13,7 @@
       .reg-complete-container {
         width: 100%;
         max-width: 100%;
-        margin: 10% auto;
+        margin: 0.2em auto;
         background-color: #f8f8f9;
         padding: 2em 2em 2.7em 2em;
         text-align: center;
