--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -79,6 +79,13 @@ body {
   display: none;
 }
 
+#profileStudyIDContainer {
+  margin-top: -1em;
+}
+#profileStudyIDContainer input {
+  width: 50%;
+  max-width: 100%;
+}
 #emailInfoText {
   display: none;
 }
@@ -1067,10 +1074,10 @@ t
   }
 }
 .side {
-  height: 26em
+  height: 28em
 }
 .side-md {
-  height: 22em
+  height: 27em
 }
 .side-lg {
   height: 32em
@@ -1428,12 +1435,17 @@ div.org-container input[type="checkbox"] {
   }
 
   .side {
-    height: 38em;
+    height: 45em !important;
   }
 
   #phone, #email {
     width: 100%;
     max-width: 100%
+  }
+
+  #profileStudyIDContainer input {
+    width: 100%;
+    max-width: 100%;
   }
 
   .form-control {
@@ -1575,7 +1587,7 @@ div.org-container input[type="checkbox"] {
     height: 10em;
   }
   .side {
-    height: 35em;
+    height: 40em;
   }
   .side-lg {
     height: 38em;
