--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -68,6 +68,9 @@ body {
 a.btn {
   font-size: @baseFontSize;
 }
+#profileStudyIDContainer {
+  display: none;
+}
 #tnthNavWrapper {
   display: none;
   visibility: hidden;
