--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -225,6 +225,10 @@ $(document).ready(function(){
         attachID: "profileTimeZone",
         targetField: $("#profileTimeZone")
      },
+     { 
+        attachID: "profileStudyIDContainer",
+        targetField: $("#profileStudyId")
+     },
      {
         attachID: "rolesGroup",
         targetField: $("input[name='user_type']")
