add UI fix to account creation page to allow no email be entered

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -680,6 +680,13 @@ input.clinic {
 #profileCreateForm h4 {
   margin-left: 3em;
 }
+#noEmailContainer {
+  margin-top: 0.3em;
+}
+#noEmail {
+  position:relative; 
+  top:-1px
+}
 #profileSendEmailContainer {
   padding-bottom: 5%;
   background-color: #f9f9f9;
