--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -758,6 +758,14 @@ input.clinic {
   margin-left: 3em;
 }
 
+#noEmailContainer {
+  margin-top: 0.3em;
+}
+#noEmail {
+  position:relative; 
+  top:-1px
+}
+
 #profileSendEmailContainer {
   padding-bottom: 5%;
   background-color: #f9f9f9;
