--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -30,7 +30,14 @@
                             <br/>
                         </div>
                     </div>
-                    {{profileEmail(False)}}
+                    <div class="form-group float-input-label profile-section" id="emailGroup">
+                        <label for="email">{{ _("Email Address") }}</label>
+                        <input type="text" class="form-control" id="email" name="email" error-field="erroremail" save-container-id="email" place-holder="{{ _('Your email') }}" value="" data-customemail="true" required>
+                        <div id="noEmailContainer">
+                            <input type="checkbox" id="noEmail" class="text-muted">&nbsp;<span class="text-muted">User does not have email address</span>
+                        </div>
+                        <div class="help-block with-errors" id="erroremail"></div>
+                    </div>
                     {{profilePhone(False)}}
                     <br/>
                     <hr class="pc-hr"/>
@@ -128,6 +135,19 @@ $(document).ready(function(){
     var hasError = false;
     var errorMessage = '';
 
+    $("#noEmail").on("click", function() {
+        if ($(this).is(":checked")) {
+            $("#email").val("");
+            $("#email").attr("disabled", true);
+            $("#email").removeAttr("required");
+            $("#email").removeAttr("data-customemail");
+        }
+        else {
+            $("#email").attr("disabled", false);
+            $("#email").attr("required", "required");
+            $("#email").attr("data-customemail", "true");
+        };
+    });
 
     $("input[name='pca_localized']").each(function() {
         $(this).on("click", function() {
@@ -182,14 +202,16 @@ $(document).ready(function(){
 
                 hasError = false;
 
-                if ($("#emailGroup").hasClass("has-error")) {
-                    hasError = true;
-                } else {
-
-                    if ($("#current_user_email").val() === $("#email").val()) {
-                        setHelpText("emailGroup", "Email is already in use.", true);
+                if (!$("#no-emai").is(":checked")) {
+                    if ($("#emailGroup").hasClass("has-error")) {
+                        hasError = true;
                     } else {
-                        setHelpText("emailGroup", "", false);
+
+                        if ($("#current_user_email").val() === $("#email").val()) {
+                            setHelpText("emailGroup", "Email is already in use.", true);
+                        } else {
+                            setHelpText("emailGroup", "", false);
+                        };
                     };
                 };
 
@@ -243,11 +265,17 @@ $(document).ready(function(){
                         'family':$.trim($('input[name=lastname]').val())
                     };
                     _demoArray['birthDate'] = $('input[name=birthDate]').val();
-                    _demoArray['telecom'] = [
-                        { 'system': 'email', 'value': $.trim($('input[name=email]').val()) },
-                        { 'system': 'phone', 'value': $.trim($('input[name=phone]').val()) }
-                    ];
 
+                    _demoArray['telecom'] = [];
+
+                    var emailVal = $.trim($('input[name=email]').val());
+                    if (hasValue(emailVal)) {
+                        _demoArray['telecom'].push({ 'system': 'email', 'value': emailVal });
+                    } else {
+                        _demoArray['telecom'].push({ 'system': 'email', 'value': '__no_email__'});
+                    };
+                    _demoArray['telecom'].push({ 'system': 'phone', 'value': $.trim($('input[name=phone]').val())});
+                    
                      var orgIDs = $('#userOrgs input:checkbox:checked').map(function(){
                         return { reference: 'api/organization/'+$(this).val() };
                     }).get();
@@ -264,11 +292,15 @@ $(document).ready(function(){
                         setTimeout("_redirect(" + _userId + ");", 1000);
                         $("#updateProfile").attr("disabled", false);
                         clear();
+                    }).catch(function(error) {
+                        errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
+                        if (errorMessage != '') $('#serviceErrorMsg').html('<small>' + errorMessage + '</small>').fadeIn();
+                        $("#updateProfile").attr("disabled", false);
                     });
 
                 }).catch(function(error) {
                     //Display Error Here
-                    console.log('error: ' + error);
+                    //console.log('error: ' + error);
                     errorMessage += (errorMessage != '' ? '<br/>' : '') + error;
                     if (errorMessage != '') $('#serviceErrorMsg').html('<small>' + errorMessage + '</small>').fadeIn();
                     $("#updateProfile").attr("disabled", false);
