fix spelling error in account creation page

--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -202,7 +202,7 @@ $(document).ready(function(){
 
                 hasError = false;
 
-                if (!$("#no-emai").is(":checked")) {
+                if (!$("#noEmail").is(":checked")) {
                     if ($("#emailGroup").hasClass("has-error")) {
                         hasError = true;
                     } else {
