remove error text in email field if no email checkbox is checked

--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -141,6 +141,7 @@ $(document).ready(function(){
             $("#email").attr("disabled", true);
             $("#email").removeAttr("required");
             $("#email").removeAttr("data-customemail");
+            $("#erroremail").text("");
         }
         else {
             $("#email").attr("disabled", false);
