fix GIL links not working on mobile devices and css fixes

--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -5803,8 +5803,8 @@ figure.nav-overlay {
         width: 100%;
     }
 
-    .side-nav * {
-        font-size: 14px;
+    .side-nav *, h3.side-nav__heading {
+        font-size: 12px !important;
     }
 }
 .is-nav-expanded .side-nav {
@@ -5853,6 +5853,11 @@ figure.nav-overlay {
 }
 .side-nav-items__item-disabled {
     opacity: 0.6;
+}
+@media (max-width: 680px) {
+    .side-nav-items__item {
+        line-height: 26px;
+    }
 }
 @media (max-width: 767px) {
     .side-nav-items__item {
