--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -92,8 +92,8 @@
           <li class="side-nav-items__item side-nav-items__item--whatisprostatecancer"><a href="{{PORTAL}}/what-is-prostate-cancer">Prostate Cancer Facts</a></li>
           <li class="side-nav-items__item side-nav-items__item--contact"><a href="{{PORTAL}}/contact">Contact</a></li>
           {% if not user %}
-            <li class="side-nav-items__button"><a data-toggle="modal" data-target="#modal-register">Join Us</a></li>
-            <li class="side-nav-items__button"><a data-toggle="modal" data-target="#modal-login">Log In</a></li>
+            <li class="side-nav-items__button"><a href="#" data-toggle="modal" data-target="#modal-register">Join Us</a></li>
+            <li class="side-nav-items__button"><a href="#" data-toggle="modal" data-target="#modal-login">Log In</a></li>
           {% else %}
             <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated"><a href="{{PORTAL}}/logout">Log Out</a></li>
           {% endif %}
