add study id field to account creationg page

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -749,13 +749,15 @@ input.clinic {
   margin-top:6px;
 }
 
-
-#profileCreateForm  .title {
+#createProfileForm  .title {
   margin-top: 5%;
 }
-
-#profileCreateForm a.btn-tnth-back, #profileCreateForm  h4 {
-  margin-left: 3em;
+#createProfileForm .study-id-label {
+  margin-top: 0.5em;
+}
+#createProfileForm #studyId {
+  width:350px; 
+  max-width: 100%;
 }
 
 #noEmailContainer {
