--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -639,12 +639,15 @@ btn {
 input.clinic {
   margin-top: 6px;
 }
-#profileCreateForm .title {
+#createProfileForm .title {
   margin-top: 5%;
 }
-#profileCreateForm a.btn-tnth-back,
-#profileCreateForm h4 {
-  margin-left: 3em;
+#createProfileForm .study-id-label {
+  margin-top: 0.5em;
+}
+#createProfileForm #studyId {
+  width:350px; 
+  max-width: 100%;
 }
 #noEmailContainer {
   margin-top: 0.3em;
