--- a/portal/templates/profile_create.html
+++ b/portal/templates/profile_create.html
@@ -32,13 +32,17 @@
                     </div>
                     <div class="form-group float-input-label profile-section" id="emailGroup">
                         <label for="email">{{ _("Email Address") }}</label>
-                        <input type="text" class="form-control" id="email" name="email" error-field="erroremail" save-container-id="email" place-holder="{{ _('Your email') }}" value="" data-customemail="true" required>
+                        <input type="text" class="form-control" id="email" name="email" error-field="erroremail" placeholder="{{ _('Your email') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
                             <input type="checkbox" id="noEmail" class="text-muted">&nbsp;<span class="text-muted">User does not have email address</span>
                         </div>
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
                     {{profilePhone(False)}}
+                    <div class="form-group">
+                        <label for="studyId" class="study-id-label">{{_("Study ID")}}</label>
+                        <input type="text" class="form-control" id="studyId" name="studyId"/>
+                    </div>
                     <br/>
                     <hr class="pc-hr"/>
                     <div class="form-group" id="clinicalGroup">
@@ -283,6 +287,26 @@ $(document).ready(function(){
         
                     _demoArray['careProvider'] = orgIDs;
 
+                    var studySource = "";
+                    var studyId = $("#studyId").val();
+                    if (hasValue(studyId)) {
+                        //use the parent org name for the study source
+                        $("#userOrgs input[name='organization']").each(function() {
+                            if (!studySource && $(this).prop("checked")) {
+                                var parentOrg = $(this).closest(".org-container[data-parent-name]").attr("data-parent-name");
+                                if (hasValue(parentOrg)) studySource = parentOrg;
+                            };
+                        });
+                        var studyIdObj = {
+                            assigner: {
+                                "display": hasValue(studySource)? studySource : "current study"
+                            },
+                            system: "http://us.truenth.org/identity-codes/external-study-id",
+                            use: "secondary",
+                            value: studyId
+                        };
+                        _demoArray["identifier"] = [studyIdObj];
+                    };
 
                     Promise.all([
                        _get('/api/demographics/'+_userId, 'PUT', JSON.stringify(_demoArray))])
